# it-is-the-purescript-egg

./: .gitignore  README.md  justfile  package.json  packages.dhall  psc-package.json  spago.dhall  webpack.config.js
.github/workflows/: blank.yml
public/: index.html
public/css/: egg.css
public/levels/: 1.json  10.json  11.json  12.json  13.json  14.json  15.json  16.json  17.json  18.json  19.json  2.json  20.json  21.json  22.json  3.json  4.json  5.json  6.json  7.json  8.json  9.json
rust/: Cargo.toml
rust/src/: lib.rs  matrix.rs
rust/src/data/: mod.rs  player_types.rs  tile_set.rs
rust/src/dom/: animation_loop.rs  canvas.rs  events.rs  gradient.rs  loader.rs  mod.rs  renderer.rs
rust/src/logic/: action.rs  board.rs  board_collisions.rs  collisions.rs  create_players.rs  initialise_level.rs  load_level.rs  map.rs  mod.rs  movement.rs  render_map.rs  take_turn.rs
rust/src/types/: action.rs  board.rs  coord.rs  current_frame.rs  game_state.rs  input_event.rs  level.rs  mod.rs  outcome.rs  player.rs  player_type.rs  render_angle.rs  resource_url.rs  score.rs  screen_size.rs  tile.rs
src/: Main.js  Main.purs  index.js
src/data/: CanvasData.purs  GameState.purs  PlayerTypes.purs  TileSet.purs
src/dom/: AnimationLoop.purs  Canvas.purs  Events.purs  Gradient.purs  Loader.purs  Renderer.purs  TouchEvents.js  TouchEvents.purs
src/logic/: .Movement.purs.swp  .TakeTurn.purs.swp  Action.purs  Board.purs  Collisions.purs  CreatePlayers.purs  InitialiseLevel.purs  LoadLevel.purs  Map.purs  (+4 more)
test/: Main.purs
ts-src/: Editor.ts  Jetpack.ts  immutable.d.ts
(+74 files in other folders)
