[package]
name = "it-is-the-egg"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
once_cell = "1"
console_error_panic_hook = "0.1"

[dependencies.web-sys]
version = "0.3"
features = [
  "Document",
  "Window",
  "Element",
  "HtmlCanvasElement",
  "CanvasRenderingContext2d",
  "CanvasGradient",
  "HtmlImageElement",
  "KeyboardEvent",
  "TouchEvent",
  "Touch",
  "TouchList",
  "Event",
  "EventTarget",
  "Performance",
  "Response",
  "Request",
  "RequestInit",
  "RequestMode",
  "Headers",
  "console",
  "ImageBitmap",
  "Url",
  "UrlSearchParams",
  "Location",
]

[profile.release]
opt-level = "s"
lto = true
